[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://scenes/MapView.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/PopupMenu.gd" type="Script" id=3]
[ext_resource path="res://scripts/Save.gd" type="Script" id=4]
[ext_resource path="res://default_rec.png" type="Image" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.486275 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0, 0, 0, 0 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 20

[node name="Main" type="Node"]
script = ExtResource( 1 )
defaultImage = ExtResource( 6 )

[node name="MapView1" parent="." instance=ExtResource( 2 )]
anchor_bottom = 0.5

[node name="Panel" type="Panel" parent="MapView1"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -25.0
margin_right = 25.0
margin_bottom = 19.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="MapView1/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Input"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MapView2" parent="." instance=ExtResource( 2 )]
anchor_top = 0.5

[node name="Panel" type="Panel" parent="MapView2"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -25.0
margin_right = 25.0
margin_bottom = 19.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="MapView2/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Output"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightClickMenu" type="PopupMenu" parent="."]
margin_right = 69.0
margin_bottom = 34.0
popup_exclusive = true
items = [ "Save As", null, 0, false, false, 0, 0, null, "", false ]
script = ExtResource( 3 )

[node name="SaveFileDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -344.0
margin_top = -200.0
margin_right = 336.0
margin_bottom = 192.0
popup_exclusive = true
resizable = true
dialog_hide_on_ok = true
access = 2
current_dir = "/user files/Source/Godot/Projects/GlobeRoller2"
current_file = "map.png"
current_path = "/user files/Source/Godot/Projects/GlobeRoller2/map.png"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -112.0
margin_top = -56.0
margin_right = 112.0
margin_bottom = 64.0
popup_exclusive = true
window_title = "Save Png"
resizable = true
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ConfirmationDialog"]
margin_left = 8.0
margin_top = 8.0
margin_right = 216.0
margin_bottom = 84.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ConfirmationDialog/VBoxContainer"]
margin_right = 208.0
margin_bottom = 14.0
text = "Output Resolution"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="ConfirmationDialog/VBoxContainer"]
margin_top = 14.0
margin_right = 208.0
margin_bottom = 38.0
size_flags_horizontal = 5

[node name="ResX" type="LineEdit" parent="ConfirmationDialog/VBoxContainer/HBoxContainer"]
margin_right = 58.0
margin_bottom = 24.0
placeholder_text = "x"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResY" type="LineEdit" parent="ConfirmationDialog/VBoxContainer/HBoxContainer"]
margin_left = 62.0
margin_right = 120.0
margin_bottom = 24.0
placeholder_text = "y"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveViewport" type="Viewport" parent="ConfirmationDialog"]
size = Vector2( 10, 5 )
transparent_bg = true
handle_input_locally = false
hdr = false
disable_3d = true
usage = 0
render_target_v_flip = true
render_target_update_mode = 3

[node name="TextureRect" type="TextureRect" parent="ConfirmationDialog/SaveViewport"]
margin_right = 40.0
margin_bottom = 40.0
stretch_mode = 1

[node name="FilteringToggle" type="CheckBox" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 88.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 472, 40 )
pressed = true
text = "Filtering"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="FilteringToggle"]
show_behind_parent = true
margin_left = -4.0
margin_top = -4.0
margin_right = 84.0
margin_bottom = 28.0
mouse_filter = 2
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[connection signal="index_pressed" from="RightClickMenu" to="RightClickMenu" method="_on_PopupMenu_index_pressed"]
[connection signal="mouse_exited" from="RightClickMenu" to="RightClickMenu" method="_on_PopupMenu_mouse_exited"]
[connection signal="confirmed" from="ConfirmationDialog" to="ConfirmationDialog" method="_on_ConfirmationDialog_confirmed"]
[connection signal="toggled" from="FilteringToggle" to="." method="_on_CheckBox_toggled"]
